Create Component: Header and Footer

--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -2,9 +2,20 @@
     <div class="row">
         <div class="col-sm">
             Register
+            <div class="reg-mobile">
+                <label for="phone">Phone Number: +91 - </label>
+                <input type="tel" name="phone" id="phone" pattern="[0-9]{10}" maxlength="10">
+            </div>
         </div>
         <div class="col-sm">
             Login
+            <div class="login-mobile">
+                <label for="phone">Phone Number: +91 - </label>
+                <input type="tel" name="phone" id="phone" pattern="[0-9]{10}" maxlength="10">
+            </div>
+            <div class="login-social">
+                Social Links
+            </div>
         </div>
     </div>
 </div>
