Work in progress for authentication component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-authentication></app-authentication>
+<main>
+    <app-authentication></app-authentication>
+</main>
 <app-footer></app-footer>
