--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,17 +1,33 @@
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            Register
+            <h2 class="text-center">Register</h2>
             <div class="reg-mobile">
-                <label for="phone">Phone Number: +91 - </label>
-                <input type="tel" name="phone" id="phone" pattern="[0-9]{10}" maxlength="10">
-            </div>
+                <div>
+                    <label for="phone">Phone Number: +91 - </label>
+                    <input type="tel" name="phone" id="phone" pattern="[0-9]{10}" maxlength="10">
+                    <button id="reg-submit" name="submit">Get OTP</button>
+                </div>
+                <div>
+                    <label for="otp">OTP</label>
+                    <input type="text" name="otp" id="otp" pattern="[0-9]{4}" maxlength="4">
+                    <button id="reg-submit" name="submit">Submit OTP</button>
+                </div>
+             </div>
         </div>
         <div class="col-sm">
-            Login
+            <h2 class="text-center">Login</h2>
             <div class="login-mobile">
-                <label for="phone">Phone Number: +91 - </label>
-                <input type="tel" name="phone" id="phone" pattern="[0-9]{10}" maxlength="10">
+                <div>
+                    <label for="phone">Phone Number: +91 - </label>
+                    <input type="tel" name="phone" id="phone" pattern="[0-9]{10}" maxlength="10">
+                    <button id="reg-submit" name="submit">Get OTP</button>
+                </div>
+                <div>
+                    <label for="otp">OTP</label>
+                    <input type="text" name="otp" id="otp" pattern="[0-9]{4}" maxlength="4">
+                    <button id="reg-submit" name="submit">Submit OTP</button>
+                </div>
             </div>
             <div class="login-social">
                 Social Links
